# ioka-test-monorepo

./: README.md  docker-compose.yaml  example.env
apps/payment-service/: Dockerfile  README.md  pyproject.toml
apps/payment-service/alembic/: env.py
apps/payment-service/alembic/versions/: 9b8efb4de258_.py
apps/payment-service/src/: config.py
apps/payment-service/src/bootstrap/: async_settings.py
apps/payment-service/src/cli/: error.py  fastapi_app.py
apps/payment-service/src/domains/common/: exceptions.py
apps/payment-service/src/domains/payments/: abstraction.py  model.py
apps/payment-service/src/dto/: commands.py
apps/payment-service/src/gateway/handlers/: async_payment.py
apps/payment-service/src/gateway/schemas/: payments.py
apps/payment-service/src/infrastructure/: async_unit_of_work.py  clients.py  hooks.py  logging.py
apps/payment-service/src/infrastructure/payments/: orm.py
apps/payment-service/src/repository/: sqlalchemy_async.py
apps/user-service/: Dockerfile  example.env  pyproject.toml
apps/user-service/alembic/: env.py
apps/user-service/alembic/versions/: 6c1f55dd8ae2_.py
apps/user-service/src/: config.py
apps/user-service/src/bootstrap/: async_settings.py
apps/user-service/src/cli/: fastapi_app.py
apps/user-service/src/infrastructure/: async_unit_of_work.py  db_async.py  hooks.py  logging.py  middleware.py
apps/user-service/src/infrastructure/users/: orm.py
nginx/: dev.conf
observability/logstash/pipeline/: logstash.conf
observability/prometheus/: prometheus.yaml
