[project]
name = "user-service"
version = "0.1.0"
description = "user service repo"
authors = [{ name = "Temirlan Ilik", email = "0penguin@mail.ru" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"patterns @ file:///Users/lanner/Projects/GitHub/ioka-two/packages/patterns",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
patterns = { develop = true }
